<resources>
    <string name="app_name">MoviesByGA</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title">TITLE</string>
    <string name="release_date">Release Date</string>
    <string name="sample_date">12-12-2012</string>
    <string name="rating">Rating</string>
    <string name="sample_rating">6.7</string>
    <string name="overview">Overview</string>


    <string name="settings_order_by_popularity_label" translatable="true">Popularity</string>
    <string name="settings_order_by_vote_label" translatable="true">Vote</string>

    <string name="settings_order_by_popularity_value">https://api.themoviedb.org/3/movie/popular</string>
    <string name="settings_order_by_vote_value">https://api.themoviedb.org/3/movie/top_rated</string>

    <!-- Default order for order preference -->
    <string name="settings_order_by_default" translatable="false">popular?</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key">order</string>

    <!-- Used to open Settings Menu from MainActivity and DetailActivity -->
    <string name="action_settings">Settings</string>
    <!-- Title of the DetailActivity -->
    <string name="title_activity_detail">Details</string>
    <string name="content_authority">com.example.marcin.moviesbyga</string>
    <string name="action_share">Share</string>
    <string name="no_internet">No internet connection.</string>
    <string name="base_url_youtube">https://www.youtube.com/watch?v=</string>
</resources>